# keel

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
src/: main.rs  models.rs  utils.rs
src/commands/: activator.rs  deactivator.rs  executor.rs  mod.rs  new.rs
src/executor/: executor.rs
src/models/: error.rs  models.rs
src/utils/: mod.rs  sample_text.rs  test_util_functions.rs  util_functions.rs
