[package]
name = "keel"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
colored = "3.0.0"
dialoguer = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.20"

[dev-dependencies]
tempfile = "3.19.1"
